2005-09-22  Albert Chu  <chu11@llnl.gov>

	* Attempt to monitor ciod daemons through /proc only.

	* tagged cerebro-1-0-0-pre9
	
2005-09-15  Albert Chu  <chu11@llnl.gov>

	* Fix bgl_ciod monitoring bugs.
	
	* tagged cerebro-1-0-0-pre8

2005-09-14  Albert Chu  <chu11@llnl.gov>

	* Turn off metric controller by default on chaos systems.
	
2005-09-09  Albert Chu  <chu11@llnl.gov>

	* Added additional monitoring functionality to bgl ciod module.
	
2005-09-01  Albert Chu  <chu11@llnl.gov>

	* src/cerebro-stat/cerebro-stat.c (_hostrange_output_data): Sort
	hostranges before output.

	* src/modules/metric/cerebro_metric_bgl_ciod.c: Add additional
	debug info.

	* src/cerebrod/cerebrod_util.c (cerebrod_reinit_socket): Handle
	additional corner case situations of a network or NIC going down.

	* tagged cerebro-1-0-0-pre7
	
2005-08-26  Albert Chu  <chu11@llnl.gov>

	* Fixed cerebrod-bgl-ion script.

	* tagged cerebro-1-0-0-pre6
	
2005-08-25  Albert Chu  <chu11@llnl.gov>

	* Update spec file for bglion build.

	* Major makefile rework.

	* Modules libs split up.

	* Variety of minor fixes

2005-08-24  Albert Chu  <chu11@llnl.gov>

	* Altered some debug message output conditions.

	* Added support for ubgl configuration and fixed up bgl
	configuration.

	* Fixed up spec file for bglion builds.

	* Altered some init.d script generation.

	* Fixed bug in bgl ciod config.

	* Fix gethostbyname bug.

	* Add support for --with-cerebrod-speaker-only option.
	
	* Add support for --with-cerebrod-no-threads option.
	
2005-08-23  Albert Chu  <chu11@llnl.gov>

	* Re-added static module build option.

	* Various minor fixes.

	* Various minor fixes to make cerebro work on ppc. 
	
2005-08-22  Albert Chu  <chu11@llnl.gov>

	* Fix minor build issues.
	
	* tag pre-static-build
	
2005-08-19  Albert Chu  <chu11@llnl.gov>

	* src/libs/common/list.c, src/libs/common/hash.c: Remove memory
	buffering.

	* Make speaker run in main() for lower memory usage.
