@@ -1,3 +1,9 @@
+2005-10-04  Albert Chu  <chu11@llnl.gov>
+
+	* Another attempt to monitor ciod daemons properly.
+
+	* tagged cerebro-1-0-0-pre10
+	
 2005-09-22  Albert Chu  <chu11@llnl.gov>
 
 	* Attempt to monitor ciod daemons through /proc only.
